<resources>
    <string name="app_name" translatable="false">Verge</string>
    <string name="app_package" translatable="false">com.vergepay.wallet</string>
    <string name="almost_equal_to" translatable="false">≈</string>
    <string name="action_scan_qr_code">Scan</string>
    <string name="action_share">Share</string>
    <string name="action_nearby_share">Nearby share</string>
    <string name="action_copy">Copy</string>
    <string name="action_edit_label">Edit label</string>
    <string name="action_empty_wallet">Use all funds</string>
    <string name="action_sweep_wallet">Sweep wallet</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_sign_verify_message">Sign/verify message</string>
    <string name="action_get_verge">Get Verge</string>
    <string name="action_account_details">Account details</string>
    <string name="action_exchange_history">Exchange history</string>
    <string name="action_new_address">New address</string>
    <string name="action_swap_coins">Swap coins</string>
    <string name="action_delete">Delete</string>
    <string name="action_change_address_type">Change address type</string>
    <string name="error_generic">Error occurred while performing action</string>
    <string name="error_could_not_read_wallet">Could not read wallet</string>
    <string name="error_camera">Could not access the device camera</string>
    <string name="button_ok">OK</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_finish">Finish</string>
    <string name="button_return">Return</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_default">Default</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="button_delete">Delete</string>
    <string name="button_add">Add</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send</string>
    <string name="button_connect">Connect</string>
    <string name="button_sign">Sign</string>
    <string name="button_verify">Verify</string>
    <string name="button_skip">Skip</string>
    <string name="button_retry">Retry</string>
    <string name="button_download">Download</string>
    <string name="button_agree">Agree</string>
    <string name="button_disagree">Disagree</string>
    <string name="button_execute">Execute</string>
    <string name="button_install">Install</string>
    <string name="button_exit">Exit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="erase_address">Erase address</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="wallet_title_request">receive</string>
    <string name="wallet_title_balance">balance</string>
    <string name="wallet_title_send">send</string>
    <string name="wallet_title_swap">swap</string>
    <string name="wallet_title_games">games</string>
    <string name="wallet_locked_message">Your wallet is locked</string>
    <string name="wallet_is_not_locked_message">Your wallet is not locked</string>
    <string name="unlock_wallet_title">Unlock your wallet</string>
    <string name="unlocking_wallet_error_title">Could not unlock your wallet</string>
    <string name="unlocking_wallet_error_detail">Are you using the correct password? Please make sure that your password was entered correctly. Attempt to restore using the recovery phrase if this error persists.</string>
    <string name="powered_by">Powered by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_wallet">Wallet</string>
    <string name="fee">Transaction fee</string>
    <string name="send">Send</string>
    <string name="trade">Exchange</string>
    <string name="receive">Receive</string>
    <string name="welcome_title">VergeXVR</string>
    <string name="welcome_text">Welcome to TORdroid</string>
    <string name="create_wallet">Create a new wallet</string>
    <string name="restore_wallet">Restore a wallet</string>
    <string name="override_wallet_warning_title">Override existing wallet?</string>
    <string name="override_new_wallet_warning_message">If you create a new wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="override_restore_wallet_warning_message">If you restore a wallet, your existing wallet will be lost unless you backed up you <i>recovery phrase</i>.</string>
    <string name="incompatible_device_warning_title">Incompatible device</string>
    <string name="incompatible_device_warning_message">This device cannot perform certain cryptographic functions due to software or hardware bugs.\nThis could be solved with an update from the device manufacturer.\n\nOpen an issue if you have any questions: github.com/vergecurrency/tordroid</string>
    <string name="seed_info">This is your <i>recovery phrase</i>, which is used to generate the keys for your wallet. Please write it down on a paper and keep it in a <b>SECURE</b> place, as you would with paper money. Anyone with access to it has access to the wallet\'s funds.\n <b><u>If you lose your recovery phrase, your wallet cannot be recovered</u></b>.</string>
    <string name="seed_title">Your recovery phrase</string>
    <string name="seed_regenerate_title">Touch to generate a new recovery phrase</string>
    <string name="restore_info">Please enter your recovery seedphrase words, or scan a private key QR code using the QR icon.</string>
    <string name="restore_seed_protected">Use a BIP39 passphrase</string>
    <string name="restore_error_checksum">Recovery phrase is not valid. Check if some words are misspelled.</string>
    <string name="pref_title_saved_connections">Saved servers</string>
    <string name="pref_summary_saved_connections">Verge randomizes across this saved server pool on startup and falls through the rest immediately if one fails.</string>
    <string name="pref_title_verge_connection_profile">Verge server</string>
    <string name="pref_title_add_custom_connection_button">+ Custom Server</string>
    <string name="connection_host_hint">Server host</string>
    <string name="connection_port_hint">Port</string>
    <string name="connection_protocol_hint">Server type</string>
    <string name="connection_protocol_summary">Choose Electrum for legacy servers and ElectrumX for modern ElectrumX backends.</string>
    <string name="connection_protocol_electrum">Electrum</string>
    <string name="connection_protocol_electrumx">ElectrumX</string>
    <string name="set_bip39_passphrase">Type your BIP39 passphrase</string>
    <string name="password_wallet_recovery">To restore your wallet, please provide the same BIP39 passphrase you used when created the protected recovery phrase.\nIf you enter a different passphrase, a new empty wallet will be created.</string>
    <string name="terms_of_service_title">Terms of service</string>
    <string name="terms_of_service" translatable="false">LEGAL DISCLAIMER\n
\n
\n
1. Risks related to the use of the Verge TORdroid Wallet\n
\n
Verge will not be responsible for any losses, damages or claims arising from events falling within the scope of the following five categories:\n
\n
(1) Mistakes made by the user of any cryptocurrency-related software or service, e.g., forgotten passwords, payments sent to wrong coin addresses, and accidental deletion of wallets.\n
\n
(2) Software problems of the wallet and/or any cryptocurrency-related software or service, e.g., corrupted wallet file, incorrectly constructed transactions, unsafe cryptographic libraries, malware affecting the wallet and/or any cryptocurrency-related software or service.\n
\n
(3) Technical failures in the hardware of the user of any cryptocurrency-related software or service, e.g., data loss due to a faulty or damaged storage device.\n
\n
(4) Security problems experienced by the user of any cryptocurrency-related software or service, e.g., unauthorized access to users\' wallets and/or accounts.\n
\n
(5) Actions or inactions of third parties and/or events experienced by third parties, e.g., bankruptcy of service providers, information security attacks on service providers, and fraud conducted by third parties.\n
\n
\n
2. Trading and Investment risks\n
\n
There is considerable exposure to risk in any crypto-currency exchange transaction. Any transaction involving currencies involves risks including, but not limited to, the potential for changing economic conditions that may substantially affect the price or liquidity of a currency. Investments in crypto-currency exchange speculation may also be susceptible to sharp rises and falls as the relevant market values fluctuate. It is for this reason that when speculating in such markets it is advisable to use only risk capital. \n
\n
\n
3. Electronic Trading Risks\n
\n
Before you engage in transactions using an electronic system, you should carefully review the rules and regulations of the exchanges offering the system and/or listing the instruments you intend to trade. Online trading has inherent risk due to system response and access times that may vary due to market conditions, system performance, and other factors. You should understand these and additional risks before trading.\n
\n
\n
4. Compliance with tax obligations\n
\n
The users of the wallet are solely responsible to determinate what, if any, taxes apply to their crypto-currency transactions. The owners of, or contributors to, the wallet are NOT responsible for determining the taxes that apply to crypto-currency transactions.\n
\n
\n
5. No warranties\n
\n
The wallet is provided on an \"as is\" basis without any warranties of any kind regarding the wallet and/or any content, data, materials and/or services provided on the wallet.\n
\n
\n
6. Limitation of liability\n
\n
Unless otherwise required by law, in no event shall the owners of, or contributors to, the wallet be liable for any damages of any kind, including, but not limited to, loss of use, loss of profits, or loss of data arising out of or in any way connected with the use of the wallet. In no way are the owners of, or contributors to, the wallet responsible for the actions, decisions, or other behavior taken or not taken by you in reliance upon the wallet.\n
\n
\n
7. Arbitration\n
\n
The user of the wallet agrees to arbitrate any dispute arising from or in connection with the wallet or this disclaimer, except for disputes related to copyrights, logos, trademarks, trade names, trade secrets or patents.\n
\n
\n
8. Last amendment\n
\n
This disclaimer was amended for the last time on January 1st, 2016.</string>
	<string name="use_pincode_only">Use pincode only</string>
    <string name="use_fingerprint_pincode">Use fingerprint + pincode</string>
    <string name="skip_button_label">Skip</string>
    <string name="app_lock_description">App lock allows you to secure your wallet using PIN-code or fingerprint (if it\'s present on your phone). You can add app lock later in Settings menu</string>
    <string name="remove_app_lock">Remove app lock</string>
    <string name="games_hero_title">Games</string>
    <string name="games_hero_subtitle">Take a break without leaving the wallet. Tetris is the first built-in game option.</string>
    <string name="games_tetris_title">Tetris</string>
    <string name="games_tetris_description">Classic block stacking with score, lines, levels, next-piece preview, and fast-drop controls.</string>
    <string name="games_tetris_button">Play Tetris</string>
    <string name="games_reference_note">Reference inspiration: LyapunovJingci/Tetris on GitHub.</string>
</resources>