<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="16dp"
        android:paddingRight="24dp"
        android:paddingBottom="8dp">

        <EditText
            android:id="@+id/connection_host_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/connection_host_hint"
            android:inputType="textUri"
            android:maxLines="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/connection_protocol_hint"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/connection_protocol_summary"
            android:textSize="12sp" />

        <RadioGroup
            android:id="@+id/connection_protocol_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/connection_protocol_electrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connection_protocol_electrum" />

            <RadioButton
                android:id="@+id/connection_protocol_electrumx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="@string/connection_protocol_electrumx" />
        </RadioGroup>

        <EditText
            android:id="@+id/connection_port_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/connection_port_hint"
            android:inputType="number"
            android:maxLines="1" />
    </LinearLayout>
</ScrollView>
