<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/pincode_dialog_bg"
    android:orientation="vertical"
    android:padding="22dp">

    <TextView
        android:id="@+id/terms_title"
        style="@style/PageTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:text="@string/terms_of_service_title"
        android:textSize="24sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="@drawable/panel_bg"
        android:padding="14dp">

        <TextView
            android:id="@+id/terms_message"
            style="@style/NormalText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:padding="14dp"
            android:text="@string/terms_of_service"
            android:textColor="@color/text_primary"
            android:textSize="14sp" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/terms_disagree"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/intro_action_button_alt_bg"
            android:elevation="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/button_disagree"
            android:textAllCaps="true"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/terms_agree"
            android:layout_width="0dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:background="@drawable/intro_action_button_bg"
            android:elevation="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/button_agree"
            android:textAllCaps="true"
            android:textColor="@color/text_primary"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
