<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/retro_card_margin_horizontal"
    android:paddingTop="4dp"
    android:paddingRight="@dimen/retro_card_margin_horizontal"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/connections_intro_title"
        style="@style/SectionTitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_title_saved_connections" />

    <TextView
        android:id="@+id/connections_intro_summary"
        style="@style/SmallHelpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/pref_summary_saved_connections" />

    <LinearLayout
        android:id="@+id/connections_server_box"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_weight="1"
        android:background="@drawable/pincode_dialog_bg"
        android:orientation="vertical"
        android:padding="14dp">

        <TextView
            android:id="@+id/connections_box_title"
            style="@style/PageTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/pref_title_verge_connection_profile"
            android:textSize="18sp" />

        <ScrollView
            android:id="@+id/connections_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1"
            android:fillViewport="true"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:id="@+id/connections_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/connections_add_custom_button"
        style="@style/IntroFooterSecondaryButton"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/pref_title_add_custom_connection_button" />
</LinearLayout>
