<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vergepay.wallet.ui.RestoreFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/coins_icon"
                style="@style/FontIconBig"
                android:layout_width="@dimen/font_icon_bg_size"
                android:layout_height="@dimen/font_icon_bg_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/font_icon_backup_wallet"
                tools:text="Ψ"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_info"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                <MultiAutoCompleteTextView
                    android:id="@+id/seed"
                    style="@style/NormalText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/panel_bg"
                    android:minHeight="120dp"
                    android:padding="16dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_muted"
                    android:inputType="textMultiLine|textNoSuggestions" />

                    <ImageButton
                        android:id="@+id/scan_qr_code"
                        android:layout_width="52dp"
                        android:layout_height="52dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/scan_button_bg"
                        android:contentDescription="@string/scan_qr_code"
                        android:padding="10dp"
                        android:scaleType="centerInside"
                        android:src="@drawable/qr_code" />

                </LinearLayout>

                <TextView
                    android:id="@+id/restore_message"
                    style="@style/ErrorText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restore_error_checksum" />

                <CheckBox
                    android:id="@+id/use_bip39"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/half_standard_margin"
                    android:text="@string/restore_seed_protected" />

                <TextView
                    android:id="@+id/bip39_info"
                    style="@style/NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_wallet_recovery" />

                <TextView
                    android:id="@+id/bip39_passphrase_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/standard_margin"
                    android:text="@string/set_bip39_passphrase"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/bip39_passphrase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/panel_bg"
                    android:ems="10"
                    android:inputType="textNoSuggestions"
                    android:padding="14dp"
                    android:textColor="@color/text_primary"
                    android:textColorHint="@color/text_muted" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="96dp">
                <Button
                    android:id="@+id/button_back"
                    android:layout_width="140dp"
                    android:layout_height="54dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="@drawable/intro_action_button_alt_bg"
                    android:elevation="6dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/button_back"
                    android:textAllCaps="true"
                    android:textColor="@color/text_primary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/seed_entry_skip"
                    style="@style/BorderlessButtonLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_skip"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />

                <Button
                    android:id="@+id/button_next"
                    android:layout_width="180dp"
                    android:layout_height="58dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/send_button_bg"
                    android:elevation="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/button_next"
                    android:textAllCaps="true"
                    android:textColor="@color/text_primary"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
